@@ -219,6 +219,14 @@ def test_c1_origin_should_trigger_js_call_for_cre_client(
         browser.contents)
 
 
+def test_c1_include_script_should_define_a_timeout_param(testbrowser):
+    browser = testbrowser('/zeit-online/article/simple')
+    inline = u''.join(browser.xpath('//script/text()'))
+    conf = zope.component.getUtility(zeit.web.core.interfaces.ISettings)
+    assert 'url: "{}/tracking/tracking.js",\n\t\ttimeout: 2000,'.format(
+        conf.get('c1_prefix')) in inline
+
+
 def test_text_file_content_should_be_rendered(testserver, testbrowser):
     browser = testbrowser('{}/text/dummy'.format(testserver.url))
     assert browser.contents == 'zeit.web\n'
